# dsf2flac

./: .gitignore  README.md  README.txt  autogen.sh  configure.ac  dsf2flac.mk  dsf2flac.project  dsf2flac.txt
extras/picard dsf file support/: README.txt
extras/picard dsf file support/dsf/: __init__.py  compatid3_dsf.py  dsf.py  id3_dsf.py
m4/: ax_boost_timer.m4  libFLAC++.m4
scripts/: batch_dsf2flac.sh  gengetopt.sh
src/: .gitignore  DSF2PCM.ggo  Makefile.am  cmdline.cpp  cmdline.h  dop_packer.cpp  dop_packer.h  dsd_decimator.cpp  dsd_decimator.h  dsd_sample_reader.cpp  dsd_sample_reader.h  dsdiff_file_reader.cpp  dsdiff_file_reader.h  dsf2flac_types.h  dsf_file_reader.cpp  dsf_file_reader.h  filters.cpp  fstream_plus.cpp  fstream_plus.h  main.cpp  tagConversion.cpp  tagConversion.h
src/libdstdec/: .gitignore  Makefile.am  ccp_calc.c  dst_data.c  dst_fram.h  dst_init.c  dst_init.h
